# OmdenaBot

./: README.md
OmdenaBotUpdated/mentalhealth_chatbot/: .gitignore  README.md  env template.txt  pyproject.toml  requirements.txt  uv lock file
OmdenaBotUpdated/mentalhealth_chatbot/mentalhealth-frontend/: package-lock.json  package.json
OmdenaBotUpdated/mentalhealth_chatbot/mentalhealth-frontend/src/: App.js
OmdenaBotUpdated/mentalhealth_chatbot/mentalhealth-frontend/src/pages/: Chat.jsx  ConsentGate.jsx  Dashboard.jsx  ExercisePage.jsx  GeneralPage.jsx  ModeSelector.jsx  ProfileFeedback.jsx  Start.jsx  SurveyWizard.jsx  ThirdPartyAuth.jsx  general.css
OmdenaBotUpdated/mentalhealth_chatbot/src/config/: tasks.yaml
OmdenaBotUpdated/mentalhealth_chatbot/src/knowledge/: mental_health_tips.txt
OmdenaBotUpdated/mentalhealth_chatbot/src/mentalhealth_chatbot/: app.py  crew.py  list_voices.py  main.py  test_llm.py
OmdenaBotUpdated/mentalhealth_chatbot/src/mentalhealth_chatbot/config/: agents.yaml  tasks.yaml
OmdenaBotUpdated/mentalhealth_chatbot/src/mentalhealth_chatbot/tools/: custom_rag_tool.py
OmdenaBotUpdated/mentalhealth_chatbot/src/tools/: custom_rag_tool.py
